--- a/frontend/app/components/monitoring-form/monitoring-form.component.html
+++ b/frontend/app/components/monitoring-form/monitoring-form.component.html
@@ -89,8 +89,8 @@
           ></span>
 
           <span
-            >Valider et saisir des
-            {{ obj.uniqueChildrenName().toLowerCase() }}</span
+            >Valider et saisir des {{obj.uniqueChildrenName()=="Point d'observations"?"points d'observation":obj.uniqueChildrenName().toLowerCase()}} 
+           </span
           >
         </button>
 
